# todo-tree

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  homebrew.yml  release.yml  test-binstall.yml  todo-tree-action.yml
cli/: .todorc.example.json  .todorc.json  Cargo.toml  flake.nix
cli/src/: cli.rs  config.rs  lib.rs  parser.rs  printer.rs  scanner.rs
core/: Cargo.toml
core/src/: lib.rs  priority.rs  tags.rs  types.rs
extensions/zed/: Cargo.toml  extension.toml
extensions/zed/languages/comment/: config.toml  highlights.scm
extensions/zed/languages/todo-comments/: config.toml  highlights.scm  outline.scm
extensions/zed/src/: cli.rs  formatter.rs  lib.rs  slash_commands.rs  types.rs
src/: lib.rs  parser.rs  printer.rs
