[workspace]
resolver = "2"
members = ["core", "cli", "extensions/zed"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Alexandre Trotel"]
license-file = "LICENSE.md"
repository = "https://github.com/alexandretrotel/todo-tree"
homepage = "https://github.com/alexandretrotel/todo-tree"

[profile.release]
lto = true
codegen-units = 1
strip = true
