[package]
name = "todo-tree"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to find and display TODO-style comments in your codebase"
authors = ["Alexandre Trotel"]
license = "MIT"
readme = "README.md"
keywords = ["todo", "cli", "developer-tools", "productivity"]
categories = ["command-line-utilities", "development-tools"]
default-run = "todo-tree"

[lib]
name = "todo_tree"
path = "src/lib.rs"

[[bin]]
name = "todo-tree"
path = "src/main.rs"

[[bin]]
name = "tt"
path = "src/bin/tt.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
regex = "1.10"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "3.0"
anyhow = "1.0"
dirs = "6.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
