[package]
name = "todo-tree-core"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for todo-tree - find and parse TODO-style comments"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "todo_tree_core"
path = "src/lib.rs"
