[package]
name = "zed-todo-tree"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zed editor extension that integrates the todo-tree CLI functionality into the Zed editor."
keywords = ["zed", "extension", "todo", "todo-tree", "productivity"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
serde = { version = "1", features = ["derive"] }
